--- a/www/page2.html
+++ b/www/page2.html
@@ -2,8 +2,9 @@
   
 <div class="app">
       <h1>Camera</h1>
-      
+      <div>
           <button id="shoot-button" onclick="shoot()">写真を撮る</button> 
+      </div>
           <img id="photo" height="400">   
       
   </div>
